# iROAM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  introduction.md  pyproject.toml
apps/analytics/: anomalies.py  gtfs_static.py  main.py  pipeline.py  project_to_shape.py  runner.py  schedule_headways.py  shapes.py  stop_projection.py  trajectory_extract.py  upsample.py  worker.py
apps/api/: main.py
apps/collector/: feed_specs.py  fetcher.py  gtfs_realtime_pb2.py  normalize_trips.py  normalize_vehicles.py  parser.py  runner.py
core/: config.py  constants.py
docs/: api.html  architecture.html  data-model.html  database-dataflow.html  examples.html  frontend.html  index.html  operations.html  prediction_mechanism.md  preprocessing_review.md  search-index.json  student_week1_tasks.md  student_week2_tasks.md
notebooks/: database_access.ipynb
scripts/: db_reset.py
tests/: _factories.py  _vp_factories.py  test_analytics_incremental.py  test_anomalies_distance.py  test_api_smoke.py  test_db_reset_script.py  test_forecast_api.py  test_forecast_features.py  test_forecast_horizon_truncation.py  test_forecast_service.py  test_gtfs_bundle_refresh.py  test_gtfs_static_load.py  test_gtfs_validate.py  test_iroam_grouping.py  test_labels_quality.py  test_latest_query.py  test_normalize_trips.py  test_normalize_vehicles.py  test_pipeline_roundtrip.py  test_project_to_shape.py  test_schedule_headways.py  test_stop_projection_monotone.py  test_trajectory_extract.py  test_upsample_parity.py  test_worker_schedule.py
(+54 files in other folders)
