[project]
name = "ttc-gtfsrt-platform"
version = "0.2.0"
description = "TTC GTFS-Realtime VehiclePositions ingestion, storage, and visualization MVP"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.35",
    "sqlalchemy>=2.0.30,<2.1",
    "alembic>=1.13,<1.15",
    "psycopg[binary]>=3.2,<3.3",
    "geoalchemy2>=0.15,<0.18",
    "httpx>=0.27,<0.29",
    # GTFS-RT bindings are vendored (apps/collector/gtfs_realtime_pb2.py) for
    # TripModifications support; the gencode requires protobuf >= 6.33.5.
    "protobuf>=6.33.5,<7",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dateutil>=2.9,<3",
    "streamlit>=1.36,<2",
    "requests>=2.32,<3",
    "pandas>=2.2,<3",
    "altair>=5.3,<6",
    "shapely>=2.0,<3",
    "pyproj>=3.6,<4",
    "lightgbm>=4,<5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*", "db*", "deployment*", "data_process*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
